--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hsr-setup"]
-	path = hsr-setup
-	url = git@gitlab.com:tue-robotics/hsr-setup.git
+    path = hsr-setup
+    url = git@github.com:tue-robotics/hsr-setup.git
