--- a/matthijs/shortcuts/pycharm-professional_pycharm-professional.desktop
+++ b/matthijs/shortcuts/pycharm-professional_pycharm-professional.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=PyCharm Professional Edition
 Icon=/snap/pycharm-professional/current/bin/pycharm.png
-Exec=bash -ic pycharm-professional %f
+Exec=bash -c "source ~/.tue/setup.bash && pycharm-professional %F"
 Comment=Python IDE for Professional Developers
 Categories=Development;IDE;
 Terminal=false
