--- a/.travis.yml
+++ b/.travis.yml
@@ -24,29 +24,4 @@ before_script:
 script:
   - bash -c 'shopt -s globstar; shellcheck ./**/*.bash ./**/*.sh ./**/setup'
   - bash -c 'find ./ -iname '*.yaml' -or -iname '*.yml' | xargs yamllint'
-  # Check if either both 'set -e' and 'set +e' are used or none
-  # yamllint disable rule:indentation
-  - |
-      bash -c '
-      shopt -s globstar
-      bad_files=""
-      files=$(echo ./**/*.bash ./**/*.sh ./**/setup)
-      for file in $files
-      do
-          if ! grep -Eqz ".*set -e.*set \+e.*" "$file" && (grep -Eqz "set -e" "$file" || grep -Eqz "set \+e" "$file")
-          then
-              bad_files=${bad_files:+${bad_files} }$file
-          fi
-      done
-
-      if [ -n "$bad_files" ]
-      then
-          echo -e "\033[38;5;1mFollowing file(s) have only \"set -e\" or \"set +e\", use both or none:\033[0m"
-          for bad_file in $bad_files
-          do
-              echo -e "\033[38;5;1m   $bad_file\033[0m"
-          done
-          exit 1
-      fi
-      '
-  # yamllint enable rule:indentation
+  - bash ./.check_set-e.bash
