[matthijs] use redshift instead of fluxgui

--- a/matthijs/install.yaml
+++ b/matthijs/install.yaml
@@ -25,16 +25,8 @@
   name: silversearcher-ag
 - type: system
   name: tree
-- type: ppa
-  default:
-    name: ppa:nathan-renniewaldock/flux
-  xenial:
-    name: null
 - type: system
-  default:
-    name: fluxgui
-  xenial:
-    name: null
+  name: redshift-gtk
 - type: system
   name: shellcheck
 - type: system
