[ros-move_base_msgs] convert to system target

--- a/ros-move_base_msgs/install.yaml
+++ b/ros-move_base_msgs/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/tue-robotics/navigation.git
-    sub-dir: move_base_msgs
+    type: system
+    name: move-base-msgs
