--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ git:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_2fc69c4133c3_key -iv $encrypted_2fc69c4133c3_iv
-    -in deploy_key.enc -out ./deploy_key -d
+    -in .deploy_key.enc -out .deploy_key -d
   - eval "$(ssh-agent -s)"
-  - chmod 600 ./deploy_key
-  - ssh-add ./deploy_key
+  - chmod 600 .deploy_key
+  - ssh-add .deploy_key
 
 install:
   - git submodule update --init --recursive
