[networking] install net-tools for ifconfig
Not installed by default on Ubuntu 18.04

--- a/networking/install.yaml
+++ b/networking/install.yaml
@@ -8,3 +8,5 @@
   name: nmap # General debugging utility typically not easy to install during network troubles
 - type: system
   name: ssh # Used for logging into this computer
+- type: system
+  name: net-tools # Provides ifconfig
