--- a/ros/install.yaml
+++ b/ros/install.yaml
@@ -1,5 +1,11 @@
 - type: target
   name: ros-setup
 
-- type: target
+- type: target-now
+  name: build-essential
+
+- type: target-now
+  name: python-rosdep
+
+- type: target-now
   name: catkin
