--- a/ros-rotate_recovery/install.yaml
+++ b/ros-rotate_recovery/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:irohms-robotics/navigation.git
-    sub-dir: rotate_recovery
-    version: melodic-devel
+    type: system
+    name: rotate-recovery
