--- a/ros-clear_costmap_recovery/install.yaml
+++ b/ros-clear_costmap_recovery/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:irohms-robotics/navigation.git
-    sub-dir: clear_costmap_recovery
-    version: melodic-devel
+    type: system
+    name: clear-costmap-recovery
