--- a/ros-map_server/install.yaml
+++ b/ros-map_server/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:irohms-robotics/navigation.git
-    sub-dir: map_server
-    version: melodic-devel
+    type: system
+    name: map-server
