--- a/ros-voxel_grid/install.yaml
+++ b/ros-voxel_grid/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: git@github.com:irohms-robotics/navigation.git
-    sub-dir: voxel_grid
-    version: melodic-devel
+    type: system
+    name: voxel-grid
