--- a/ros-moveit_python/install.yaml
+++ b/ros-moveit_python/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
-      type: git
-      url: https://github.com/mikeferguson/moveit_python.git
+    type: system
+    name: moveit-python
