--- a/ros-fetch_move_base_mapping/install.yaml
+++ b/ros-fetch_move_base_mapping/install.yaml
@@ -3,3 +3,4 @@
       type: git
       url: git@github.com:KavrakiLab/fetch_move_base.git
       sub-dir: fetch_move_base_mapping
+      version: melodic-devel
