--- a/ros-moveit_ros_occupancy_map_monitor/install.yaml
+++ b/ros-moveit_ros_occupancy_map_monitor/install.yaml
@@ -1,6 +1,4 @@
 - type: ros
   source:
-      type: git
-      url: git@github.com:KavrakiLab/moveit.git
-      version: melodic-devel-ompl-source
-      sub-dir: moveit_ros/occupancy_map_monitor
+    type: system
+    name: moveit-ros-occupancy-map-monitor
