--- a/ros-log4cpp/install.yaml
+++ b/ros-log4cpp/install.yaml
@@ -1,7 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: log4cpp
-#    type: git
-#    url: https://github.com/orocos-toolchain/log4cpp.git
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: log4cpp
+  melodic:
+    source:
+      type: git
+      url: https://github.com/orocos-toolchain/log4cpp.git
+      version: toolchain-2.9
