--- a/ros-ocl/install.yaml
+++ b/ros-ocl/install.yaml
@@ -1,7 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: ocl
-#    type: git
-#    url: https://github.com/orocos-toolchain/ocl.git
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: ocl
+  melodic:
+    source:
+      type: git
+      url: https://github.com/orocos-toolchain/ocl.git
+      version: toolchain-2.9
