--- a/ros-rtt/install.yaml
+++ b/ros-rtt/install.yaml
@@ -1,7 +1,10 @@
 - type: ros
-  source:
-    type: system
-    name: rtt
-#    type: git
-#    url: https://github.com/tue-robotics/rtt.git
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: rtt
+  melodic:
+    source:
+      type: git
+      url: https://github.com/tue-robotics/rtt.git
+      version: toolchain-2.9
