--- a/ros-rtt_common_msgs/install.yaml
+++ b/ros-rtt_common_msgs/install.yaml
@@ -1,8 +1,11 @@
 - type: ros
-  source:
-    type: system
-    name: rtt-ros-integration
-#    type: git
-#    url: https://github.com/orocos/rtt_ros_integration.git
-#    sub-dir: rtt_common_msgs
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: rtt-common-msgs
+  melodic:
+    source:
+      type: git
+      url: https://github.com/orocos/rtt_ros_integration.git
+      sub-dir: rtt_common_msgs
+      version: toolchain-2.9
