--- a/ros-rtt_rosgraph_msgs/install.yaml
+++ b/ros-rtt_rosgraph_msgs/install.yaml
@@ -1,8 +1,11 @@
 - type: ros
-  source:
-    type: system
-    name: rtt-ros-integration
-#    type: git
-#    url: https://github.com/orocos/rtt_ros_integration.git
-#    sub-dir: typekits/rtt_rosgraph_msgs
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: rtt-rosgraph-msgs
+  melodic:
+    source:
+      type: git
+      url: https://github.com/orocos/rtt_ros_integration.git
+      sub-dir: typekits/rtt_rosgraph_msgs
+      version: toolchain-2.9
