--- a/ros-rtt_std_srvs/install.yaml
+++ b/ros-rtt_std_srvs/install.yaml
@@ -1,8 +1,11 @@
 - type: ros
-  source:
-    type: system
-    name: rtt-std-srvs
-#    type: git
-#    url: https://github.com/orocos/rtt_ros_integration.git
-#    sub-dir: typekits/rtt_std_srvs
-#    version: toolchain-2.9
+  default:
+    source:
+      type: system
+      name: rtt-std-srvs
+  melodic:
+    source:
+      type: git
+      url: https://github.com/orocos/rtt_ros_integration.git
+      sub-dir: typekits/rtt_std_srvs
+      version: toolchain-2.9
