--- a/ros-rtt/install.yaml
+++ b/ros-rtt/install.yaml
@@ -6,5 +6,5 @@
   melodic:
     source:
       type: git
-      url: https://github.com/tue-robotics/rtt.git
+      url: https://github.com/orocos-toolchain/rtt.git
       version: toolchain-2.9
