--- a/ros/install.yaml
+++ b/ros/install.yaml
@@ -5,7 +5,12 @@
   name: build-essential
 
 - type: target-now
-  name: python-rosdep
+  default:
+    name: python3-rosdep
+  bionic:
+    name: python-rosdep
+  xenial:
+    name: python-rosdep
 
 - type: target-now
   name: catkin
