--- a/openface/install.yaml
+++ b/openface/install.yaml
@@ -1,17 +1,42 @@
 - type: target-now
-  name: python-numpy
+  default:
+    name: python3-numpy
+  bionic:
+    name: python-numpy
+  xenial:
+    name: python-numpy
 
 - type: target-now
-  name: python-pandas
+  default:
+    name: python3-pandas
+  bionic:
+    name: python-pandas
+  xenial:
+    name: python-pandas
 
 - type: target-now
-  name: python-scipy
+  default:
+    name: python3-scipy
+  bionic:
+    name: python-scipy
+  xenial:
+    name: python-scipy
 
 - type: target-now
-  name: python-skimage
+  default:
+    name: python3-skimage
+  bionic:
+    name: python-skimage
+  xenial:
+    name: python-skimage
 
 - type: target-now
-  name: python-sklearn
+  default:
+    name: python3-sklearn
+  bionic:
+    name: python-sklearn
+  xenial:
+    name: python-sklearn
 
 - type: target-now
   name: python-dlib
