--- a/ros-cob_moveit_config/install.yaml
+++ b/ros-cob_moveit_config/install.yaml
@@ -1,4 +1,6 @@
 - type: ros
   source:
-    type: system
-    name: cob-moveit-config
+      type: git
+      url: git@github.com:ipa320/cob_robots.git
+      sub-dir: cob_moveit_config
+      version: kinetic_dev
