fix(skills)Added version to fix CI (hopefully)

--- a/ros-sergio_skills/install.yaml
+++ b/ros-sergio_skills/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/tue_robocup.git
     sub-dir: sergio_skills
+    version: feature/separate-robot-skills
