--- a/ros-hero_skills/install.yaml
+++ b/ros-hero_skills/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/tue-robotics/tue_robocup.git
     sub-dir: hero_skills
+    version: feature/separate-robot-skills
