[ros-gazebo_plugins] use noetic-devel
As it isn't the default branch

--- a/ros-gazebo_plugins/install.yaml
+++ b/ros-gazebo_plugins/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/ros-simulation/gazebo_ros_pkgs.git
     sub-dir: gazebo_plugins
+    version: noetic-devel
