--- a/hero2-demo/install.yaml
+++ b/hero2-demo/install.yaml
@@ -16,6 +16,8 @@
 # challenge_demo
 - type: target
   name: ros-challenge_demo
+- type: target
+  name: ros-hero_skills
 
 # Telegram
 - type: target
