--- a/ros-rplidar_ros/install.yaml
+++ b/ros-rplidar_ros/install.yaml
@@ -1,4 +1,17 @@
 - type: ros
-  source:
-    type: system
-    name: rplidar-ros
+  default:
+    source:
+      type: system
+      name: rplidar-ros
+  kinetic:
+    source:
+      type: system
+      name: rplidar-ros
+  melodic:
+    source:
+      type: system
+      name: rplidar-ros
+  noetic:
+    source:
+      type: git
+      url: git@github.com:Slamtec/rplidar_ros.git
