--- a/ros-orocos_kdl/install.yaml
+++ b/ros-orocos_kdl/install.yaml
@@ -7,7 +7,8 @@
     source:
       type: system
       name: orocos-kdl
+  default:
+    source: null
 
 - type: system
-  noetic:
-    name: liborocos-kdl-dev
+  name: liborocos-kdl-dev
