[python3-catkin-tools] use new ppa
dep on osrf-common should be fixed

--- a/python3-catkin-tools/install.yaml
+++ b/python3-catkin-tools/install.yaml
@@ -1,11 +1,8 @@
 - type: target
-  name: ros-setup
+  name: catkin-tools-setup
 
 - type: system
   name: python3-catkin-tools
-
-- type: system # temp till catkin-tools is fixed for python3
-  name: python3-osrf-pycommon
 
 - type: pip
   name: psutil
