--- a/ros-topological_action_planner/install.yaml
+++ b/ros-topological_action_planner/install.yaml
@@ -2,3 +2,4 @@
   source:
     type: git
     url: https://github.com/tue-robotics/topological_action_planner.git
+    sub-dir: topological_action_planner
