Fix Universal robots targets

--- a/ros-ur_gazebo/install.yaml
+++ b/ros-ur_gazebo/install.yaml
@@ -3,5 +3,5 @@
       type: git
       #url: git@github.com:KavrakiLab/universal_robot.git
       url: git@github.com:RobotnikAutomation/universal_robot.git
-      sub-dir: robotiq_force_torque_sensor
+      sub-dir: ur_gazebo
       version: calibration_devel
