--- a/ros-velodyne_description/install.yaml
+++ b/ros-velodyne_description/install.yaml
@@ -3,3 +3,4 @@
       type: git
       url: git@github.com:RobotnikAutomation/velodyne_simulator.git 
       sub-dir: velodyne_description 
+      version: 1.0.0
