[qtcreator][matthijs] move tue QtCreator desktop file qtcreator target

--- a/qtcreator/shortcut/org.qt-project.qtcreator.desktop
+++ b/qtcreator/shortcut/org.qt-project.qtcreator.desktop
@@ -1,4 +1,4 @@
-# Matthijs
+# tue_robotics
 [Desktop Entry]
 Type=Application
 Exec=bash -c "shopt -s expand_aliases && source ~/.tue/setup.bash && qtcreator %F"
