--- a/tue-documentation-github/install.yaml
+++ b/tue-documentation-github/install.yaml
@@ -121,6 +121,8 @@
 - type: target
   name: ros-head_ref_msgs
 - type: target
+  name: ros-hero_skills
+- type: target
   name: ros-hmi
 - type: target
   name: ros-hmi_msgs
