--- a/ros-hsrb_moveit_config/install.yaml
+++ b/ros-hsrb_moveit_config/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
     type: git
-    url: git@github.com:tue-robotics/hsrb_moveit.git
-    sub-dir: hsrb_moveit_config
+    url: https://github.com/tue-robotics/hsrb_moveit_config.git
