--- a/ros-hsrb_moveit_config/install.yaml
+++ b/ros-hsrb_moveit_config/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/hsrb_moveit_config.git
+    url: git@github.com:tue-robotics/hsrb_moveit.git
+    sub-dir: hsrb_moveit_config
