[python3-catkin-tools] limit catkin version because of breaking change
See https://github.com/catkin/catkin_tools/pull/712 and https://github.com/mikepurvis/catkin_tools_document/pull/25

--- a/python3-catkin-tools/install.yaml
+++ b/python3-catkin-tools/install.yaml
@@ -2,7 +2,7 @@
   name: ros-setup
 
 - type: system
-  name: python3-catkin-tools
+  name: python3-catkin-tools<=0.8.2
 
 - type: pip
   name: psutil
