strip some ros- prefix of targets convert to rosdep

--- a/hero-dev/install.yaml
+++ b/hero-dev/install.yaml
@@ -10,7 +10,7 @@
 
 # Visualization
 - type: target
-  name: ros-rviz
+  name: rviz
 
 # DATA
 - type: target
@@ -18,7 +18,7 @@
 
 # Diagnostics
 - type: target
-  name: ros-viz
+  name: viz
 
 # -------------------- ROBOCUP --------------------
 
