--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -3,7 +3,7 @@
   name: tue-common
 
 - type: target
-  name: ros-diagnostic_aggregator
+  name: diagnostic_aggregator
 
 - type: target
   name: ros-node_alive
@@ -20,7 +20,7 @@
 
 # SLAM
 - type: target
-  name: ros-gmapping
+  name: gmapping
 
 # World model
 - type: target
