--- a/amigo-start/install.yaml
+++ b/amigo-start/install.yaml
@@ -11,7 +11,7 @@
   name: ros-amigo_description
 
 - type: target
-  name: ros-robot_state_publisher
+  name: robot_state_publisher
 
 - type: target
   name: ros-rosbridge_server
