[python3-catkin-tools] fixed version has been released on pip
Will move back to system, when that is available too

--- a/python3-catkin-tools/install.yaml
+++ b/python3-catkin-tools/install.yaml
@@ -5,7 +5,7 @@
 #   name: python3-catkin-tools
 
 - type: pip
-  name: catkin-tools<=0.8.2
+  name: catkin-tools>=0.8.4
 
 - type: pip
   name: psutil
