--- a/python3-catkin-tools/install.yaml
+++ b/python3-catkin-tools/install.yaml
@@ -1,11 +1,8 @@
-# - type: target
-#   name: ros-setup
+- type: target
+  name: ros-setup
 
-# - type: system # We can go back to system install, once catkin_tools_document is compatible with >=0.8.3
-#   name: python3-catkin-tools
-
-- type: pip
-  name: catkin-tools>=0.8.4
+- type: system
+  name: python3-catkin-tools
 
 - type: pip
   name: psutil
