--- a/ros-teb_local_planner/install.yaml
+++ b/ros-teb_local_planner/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: teb-local-planner
+    url: git@github.com:rst-tu-dortmund/teb_local_planner.git
+    version: melodic-devel
 
