Removing some dependencies from Kavrakilab

--- a/ros-fetch_gazebo/install.yaml
+++ b/ros-fetch_gazebo/install.yaml
@@ -1,6 +1,6 @@
 - type: ros
   source:
       type: git
-      url: git@github.com:KavrakiLab/fetch_gazebo.git
+      url: git@github.com:fetchrobotics/fetch_gazebo.git
       version: gazebo9 
       sub-dir: fetch_gazebo
