--- a/ros-fetch_navigation/install.yaml
+++ b/ros-fetch_navigation/install.yaml
@@ -1,6 +1,6 @@
 - type: ros
   source:
       type: git
-      url: git@github.com:KavrakiLab/fetch_ros.git
+      url: git@github.com:fetchrobotics/fetch_ros.git
       version: melodic-devel
       sub-dir: fetch_navigation
