[hero-chrony-client-pc] amigo -> hero

--- a/hero-chrony-client-pc/chrony.conf
+++ b/hero-chrony-client-pc/chrony.conf
@@ -1,7 +1,7 @@
-# Client PC's can only synchronise with amigo1 beteen 2^2=4 and 2^5=32 seconds
+# Client PC's can only synchronise with hero1 beteen 2^2=4 and 2^5=32 seconds
 server hero1.local minpoll 2 maxpoll 5
 
-# Setup a local stratum. amigo1.local can sync back to this on boot, prevent issues with failing batteries and going back to the year 1970
+# Setup a local stratum. hero1.local can sync back to this on boot, prevent issues with failing batteries and going back to the year 1970
 local stratum 10
 allow hero1.local
 
