--- a/ros-naoqi_bridge_msgs/install.yaml
+++ b/ros-naoqi_bridge_msgs/install.yaml
@@ -1,5 +1,9 @@
 - type: ros
-  source:
+  noetic:
+    source:
+      type: git
+      url: git@github.com:ros-naoqi/naoqi_bridge_msgs.git
+  default:
+    source:
       type: system
       name: naoqi-bridge-msgs
-
