--- a/ros-naoqi_libqi/install.yaml
+++ b/ros-naoqi_libqi/install.yaml
@@ -1,4 +1,10 @@
 - type: ros
-  source:
+  noetic:
+    source:
+      type: git
+      url: git@github.com:ros-naoqi/libqi.git
+      version: noetic-devel
+  default:
+    source:
       type: system
       name: naoqi-libqi
