--- a/ros-pepper_pipeline/install.yaml
+++ b/ros-pepper_pipeline/install.yaml
@@ -1,5 +1,12 @@
 - type: ros
-  source:
+  noetic:
+    source:
+      type: git
+      url: git@github.com:sasilva1998/social-rrt-demo.git
+      sub-dir: pepper_pipeline
+      version: noetic-devel
+  default:
+    source:
       type: git
       url: git@github.com:sasilva1998/social-rrt-demo.git
       sub-dir: pepper_pipeline
