--- a/ros-teb_local_planner/install.yaml
+++ b/ros-teb_local_planner/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-    url: git@github.com:rst-tu-dortmund/teb_local_planner.git
-    version: melodic-devel
-
+    type: system
+    name: teb-local-planner
